FACT-2875-Move pipelines to Infrastructure V2 (#1331)
* FACT-2875-Move pipelines to Infrastructure V2

* logger upgrade